# KAdath_Frontera

./: .gitignore  CMakeLists.txt  README.md  README.txt  RELEASE_NOTES.MD  bitbucket-pipelines.yml  citations-bibtex.md  config.h.in  install_par.sh  install_seq.sh  installation.md  installer.sh  source_kadath.sh
Cmake/: CMakeExec.cmake  CMakeLocal.cmake  CMakeLocal.cmake.bionic  CMakeLocal.cmake.goethe  CMakeLocal.cmake.goethe_2020  CMakeLocal.cmake.goethe_intel19  CMakeLocal.cmake.hawk  CMakeLocal.cmake.iboga  CMakeLocal.cmake.mesopsl  CMakeLocal.cmake.nersc  CMakeLocal.cmake.poincare  CMakeLocal.cmake.sm  CMakeLocal.cmake.smng  CMakeLocal.cmake.smng_gcc  CMakeLocal.cmake.ubuntu14  CMakeLocal.cmake.xenial  FindFFTW.cmake  FindMKL.cmake  FindMKL_gpu.cmake  FindPGPLOT.cmake  FindSUNDIALS.cmake  README_MESOPSL
build_debug/: CMakeLists.txt
build_release/: CMakeLists.txt  compile
codes/: CMakeLists.txt
codes/BBH/: CMakeLists.txt
codes/BBH/lib/: plot_1d_multiple.py  plot_simple_1d.py
codes/BBH/src/: increase_resolution.cpp  kadath_readers.cpp  reader.cpp  solve.cpp
codes/BH/: CMakeLists.txt
codes/BH/src/: increase_resolution.cpp  reader.cpp  setup.cpp  solve.cpp
codes/BHNS/: CMakeLists.txt
codes/BHNS/ref/: bh_1.4.info  bns.60.info
codes/BHNS/src/: increase_resolution.cpp  reader.cpp  setup.cpp  solve.cpp
codes/BNS/: CMakeLists.txt
codes/BNS/src/: import_data.cpp  kadath_readers.cpp  reader.cpp  setup.cpp  solve.cpp
codes/FUKAv1_Solvers/BBH/: CMakeLists.txt  README
codes/FUKAv1_Solvers/BBH/lib/: plot_1d_multiple_newer.py
codes/FUKAv1_Solvers/BBH/src/: increase_resolution.cpp  kadath_readers.cpp  reader.cpp  setup.cpp  solve.cpp
codes/FUKAv1_Solvers/BH/: CMakeLists.txt  README
codes/FUKAv1_Solvers/BH/src/: increase_resolution.cpp  kadath_readers.cpp  reader.cpp  setup.cpp  solve.cpp
codes/FUKAv1_Solvers/BHNS/: CMakeLists.txt  README  compile
codes/FUKAv1_Solvers/BHNS/ref/: bh_1.4.info  bns.60.info
codes/FUKAv1_Solvers/BHNS/src/: increase_resolution.cpp  kadath_readers.cpp  reader.cpp  setup.cpp  solve.cpp  superimposed_setup.cpp
codes/FUKAv1_Solvers/BNS/: CMakeLists.txt  README
codes/FUKAv1_Solvers/BNS/lib/: export_unigrid.py  plot_1d_multiple.py  plot_eb.py
codes/FUKAv1_Solvers/BNS/src/: bin_props.cpp  import_data.cpp  increase_resolution.cpp  kadath_readers.cpp  reader.cpp  setup.cpp  solve.cpp
codes/FUKAv1_Solvers/NS/: .gitignore  CMakeLists.txt
codes/FUKAv1_Solvers/NS/src/: increase_resolution.cpp  kadath_readers.cpp  reader.cpp  setup.cpp  solve.cpp
codes/FUKAv2_Solvers/: README.md  fuka_tutorials.md
codes/FUKAv2_Solvers/BBH/: README.md  test_gsl  test_gsl.cpp
codes/FUKAv2_Solvers/BBH/src/: kadath_readers.cpp  reader.cpp  solve.cpp
codes/FUKAv2_Solvers/BBH_boost/: CMakeLists.txt
codes/FUKAv2_Solvers/BBH_boost/src/: solve.cpp
codes/FUKAv2_Solvers/BH/: CMakeLists.txt  README.md
codes/FUKAv2_Solvers/BH/src/: kadath_readers.cpp  reader.cpp  solve.cpp
codes/FUKAv2_Solvers/BHNS/: README.md
codes/FUKAv2_Solvers/BHNS/src/: kadath_readers.cpp  reader.cpp  solve.cpp
codes/FUKAv2_Solvers/BNS/: CMakeLists.txt  README.md
codes/FUKAv2_Solvers/BNS/src/: kadath_readers.cpp  reader.cpp  solve.cpp
codes/FUKAv2_Solvers/NS/: README.md
codes/FUKAv2_Solvers/NS/src/: kadath_readers.cpp  reader.cpp  solve.cpp
codes/NS/: CMakeLists.txt  README
codes/NS/src/: reader.cpp  setup.cpp  solve.cpp
codes/Par_version/: CMakeLists.txt
codes/Par_version/Boson/: CMakeLists.txt  README  init.cpp  reader.cpp  sequence.cpp
codes/Par_version/Kerr/: CMakeLists.txt  README  kerr.cpp  kerr_mpi.cpp
codes/Par_version/Misner/: CMakeLists.txt  misner_mpi.cpp
codes/Par_version/Scalability/: CMakeLists.txt  boson_sc.cpp  kerr_sc.cpp  schwarz_sc.cpp
codes/Par_version/Schwarz/: CMakeLists.txt  schwarz_mpi.cpp
codes/PythonTools/: CMakeLists.txt  Example_2D.sh  FUKA_Plot_Tutorial.ipynb  README.md  compile  plot_fukaid_1D.py  plot_fukaid_2D.py  print_fields.py  show_fields.py  test.py
codes/PythonTools/Example_id/: converged_BBH_TOTAL_BC.10.0.0.1.q1.0.0.09.info  converged_BHNS_ECC_RED.togashi.35.0.6.0.52.3.6.q0.487603.0.1.11.info  converged_BH_TOTAL_BC.0.5.0.0.09.info  converged_BNS_TOTAL.togashi.30.6.0.0.2.8.q1.0.0.09.info  converged_NS_TOTAL_BC.togashi.2.23.-0.4.0.11.info
codes/PythonTools/lib/fukaID_readers/bbh/: __init__.py
codes/PythonTools/lib/fukaID_readers/bh/: __init__.py
codes/PythonTools/lib/fukaID_readers/bhns/: __init__.py
codes/PythonTools/lib/fukaID_readers/bns/: __init__.py
codes/PythonTools/lib/fukaID_readers/ns/: __init__.py
codes/PythonTools/lib/fukaID_readers/pyConfigurator/: __init__.py
codes/PythonTools/lib/fuka_plot_tools/: setup_argparse.py  setup_utils.py
codes/PythonTools/src/: bbh_reader.cpp  bh_reader.cpp  bhns_reader.cpp  bns_reader.cpp  ns_reader.cpp  pyConfigurator.cpp
codes/PythonTools/src/include/: fuka_py.hpp  fuka_syst_vars.hpp  fuka_syst_vars_hydro.hpp
codes/Seq_version/: CMakeLists.txt  kerr_seq.cpp  misner.cpp  misner_seq.cpp  schwarz-multi-thread.cpp  schwarz.cpp  schwarz_seq.cpp  stokes.cpp
codes/include/: codes_utilities.hpp  kerr.hpp  schwarz.hpp  utility.hpp
tests/: CMakeLists.txt  kerr_testing.cpp  main_test.cpp  t-array.cpp  t-array_iterator.cpp  t-kerr_mpi.cpp  t-schwarz.cpp  t-schwarz_mpi.cpp  t-schwarz_seq.cpp  t-solvers.cpp  t-utils.cpp  test_tools.hpp  utils_test.cpp
tests/codes/: CMakeLists.txt
tests/codes/Par_version/Boson/: CMakeLists.txt  init.cpp  reader.cpp  sequence.cpp
tests/codes/Par_version/Kerr/: CMakeLists.txt  reader.cpp
tests/codes/Par_version/Misner/: CMakeLists.txt
tests/codes/Par_version/Schwarz/: CMakeLists.txt  schwarz_mpi.cpp
tests/codes/Seq_version/: CMakeLists.txt  kerr_seq.cpp  schwarz_seq.cpp
tests/codes/include/: codes_utilities.hpp  kerr.hpp
tests/include/: test_tools.hpp
tutorials/: CMakeLists.txt  schwarz.cpp  schwarz_mpi.cpp  starter.cpp  starter_mpi.cpp  tuto1.cpp  tuto10.cpp  tuto11.cpp  tuto12_read.cpp  tuto12_save.cpp  tuto2.cpp  tuto3.cpp  tuto4.cpp  tuto5.cpp  tuto6.cpp  tuto7.cpp  tuto8.cpp  tuto9.cpp
(+772 files in other folders)
