if(ENABLE_TESTING)
#    add_test(NAME t-array_iterator)
#    add_executable(kadath_tests_run utils_test.cpp main_test.cpp ${HEADERS})
#    target_link_libraries(kadath_tests_run kadath ${KADATH_DEPENDENCIES})
#    set_target_properties(kadath_tests_run  PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
endif(ENABLE_TESTING)

#Executable kerr_testing
if(PAR_VERSION)
    set (KERR_TESTING kerr_testing)
    set (SOURCES_KERR_TESTING ${KERR_TESTING}.cpp)
    add_executable(${KERR_TESTING} ${SOURCES_KERR_TESTING} ${HEADERS})
    target_link_libraries(${KERR_TESTING} kadath ${KADATH_DEPENDENCIES})
    set_target_properties(${KERR_TESTING} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests/)
endif(PAR_VERSION)