if(ENABLE_TESTING)
    add_executable(t-array_iterator t-array_iterator.cpp)
    target_link_libraries(t-array_iterator kadath ${KADATH_DEPENDENCIES})
    set_target_properties(t-array_iterator PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)
    add_test(NAME t-array_iterator COMMAND ./t-array_iterator)
endif(ENABLE_TESTING)

#Executable kerr_testing
if(PAR_VERSION)
    set (KERR_TESTING kerr_testing)
    set (SOURCES_KERR_TESTING ${KERR_TESTING}.cpp)
    add_executable(${KERR_TESTING} ${SOURCES_KERR_TESTING} ${HEADERS})
    target_link_libraries(${KERR_TESTING} kadath ${KADATH_DEPENDENCIES})
    set_target_properties(${KERR_TESTING} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests/)
endif(PAR_VERSION)