if(ENABLE_TESTING)
    set(TEST_ARRAY_ITERATOR t-array_iterator)
    add_executable(${TEST_ARRAY_ITERATOR} ${TEST_ARRAY_ITERATOR}.cpp)
    target_link_libraries(${TEST_ARRAY_ITERATOR} kadath ${KADATH_DEPENDENCIES})
    set_target_properties(${TEST_ARRAY_ITERATOR} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)
    add_test(NAME ${TEST_ARRAY_ITERATOR} COMMAND ./${TEST_ARRAY_ITERATOR})

    set(TEST_UTILS t-utils)
    add_executable(${TEST_UTILS} ${TEST_UTILS}.cpp)
    target_link_libraries(${TEST_UTILS} kadath ${KADATH_DEPENDENCIES})
    set_target_properties(${TEST_UTILS} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)
    add_test(NAME ${TEST_UTILS} COMMAND ./${TEST_UTILS})

    set(TEST_SCHWARZ_SEQ t-schwarz_seq)
    add_executable(${TEST_SCHWARZ_SEQ} ${TEST_SCHWARZ_SEQ}.cpp)
    target_link_libraries(${TEST_SCHWARZ_SEQ} kadath ${KADATH_DEPENDENCIES})
    set_target_properties(${TEST_SCHWARZ_SEQ} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)
    add_test(NAME ${TEST_SCHWARZ_SEQ} COMMAND ./${TEST_SCHWARZ_SEQ})

    if(PAR_VERSION)
        set(TEST_SCHWARZ_MPI t-schwarz_mpi)
        add_executable(${TEST_SCHWARZ_MPI} ${TEST_SCHWARZ_MPI}.cpp)
        target_link_libraries(${TEST_SCHWARZ_MPI} kadath ${KADATH_DEPENDENCIES})
        set_target_properties(${TEST_SCHWARZ_MPI} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)
        add_test(NAME ${TEST_SCHWARZ_MPI} COMMAND mpirun -np 4 ./${TEST_SCHWARZ_MPI})

        set (TEST_KERR_MPI t-kerr_mpi)
        add_executable(${TEST_KERR_MPI} ${TEST_KERR_MPI}.cpp)
        target_link_libraries(${TEST_KERR_MPI} kadath ${KADATH_DEPENDENCIES})
        set_target_properties(${TEST_KERR_MPI} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests/)
        add_test(NAME ${TEST_KERR_MPI} COMMAND mpirun -np 4 ./${TEST_KERR_MPI})
    endif(PAR_VERSION)
endif(ENABLE_TESTING)
